# store_warehouse

./: README.md  docker-compose-store.yml  docker-compose-warehouse.yml  pyproject.toml  store.Dockerfile  warehouse.Dockerfile
store/: pytest.ini
store/core/: admin.py  models.py  signals.py  tasks.py  tests.py
store/core/api/: serializers.py  urls.py
store/core/migrations/: 0001_initial.py  0002_superuser.py
store/store/: celery.py  settings.py
warehouse/: pytest.ini
warehouse/core/: admin.py  models.py  signals.py  tasks.py  tests.py
warehouse/core/api/: serializers.py  urls.py  views.py
warehouse/core/migrations/: 0001_initial.py  0002_superuser.py
warehouse/warehouse/: celery.py  settings.py
